  - Analytical nuclear gradients and hessian for ECP integrals
  - GIAO-ECP integrals for NMR shielding
  - Interface to pyWannier90
  - Restricted MP2 with k-point sampling
  - RCCSD(T), UCCSD(T) and GCCSD(T) density matrices
  - RCCSD(T), UCCSD(T) analytical nuclear gradients
  - CASCI/CASSCF analytical nuclear gradients
  - Cartesian GTO (6d 10f) basis in PBC calculations
* Improved
  - Supported to set omp threads in FCI solver
  - Supported even number of grids in pbc calculations
  - Performance of UCCSD lambda solver
  - The function to make SCF initial guess from the chkfile of the
    molecule with different geometry
  - The mcscf natural orbitals in the state-average calculation
  - Performance of ECP integrals
  - Prescreening for PBC 3-center integrals
  - G0W0


PySCF 1.4.3 (2018-01-17)
-----------------------
* Improved
  - Assert convergence in geometry optimization
  - Initial guess in SCF PES scanning
  - Memory usage for generating Becke-grids in DFT
* Bugfix
  - XC parser to support the scaled compound functional
  - In the second order SCF algorithm, removing level_shift
  - k-point RCCSD for non-canonical HF reference
  - basis contraction in ECP integrals


PySCF 1.4.2 (2017-12-06)
------------------------
* Added
  - Frank Jensen, Polarization consistent basis sets
* Improved
  - Memory usage of pbc KHF calculation when HF exchange is computed with FFTDF
* Bugfix
  - pyberny interface
  - PBC GDF initialization for hybrid functional
  - guess of wfn symmetry for given fci wfn
  - Entropy of Gaussian smearing


PySCF 1.4.1 (2017-11-12)
------------------------
* Bugfix
  - meta-GGA functional detection code in XC parser
  - Orbital symmetry label in mcscf initial guess projection
  - Eigenvalue ordering for Davidson eigen solver
  - Madelung constant of non-orthogonal lattice
  - Convergence of Madelung constant for huge number of k-points samples
  - basis parser for pople-type basis